2009-12-01  Eric Blake  <ebb9@byu.net>

	[BZ #11039]
	* posix/getopt.c (_getopt_internal_r): Skip optional - or + before
	checking lead byte of optstring for :.

	[BZ #11040]
	* posix/getopt.c (_getopt_internal_r): Reject '-;' as short
	option, since it conflicts with "W;" optstring extension.

2009-12-02  Eric Blake  <ebb9@byu.net>

	[BZ #11041]
	* posix/getopt.c (_getopt_internal_r): Handle '-Wfoo' identically
	to '--foo', with optional argument or non-ambiguous prefix.

2010-04-07  Ulrich Drepper  <drepper@redhat.com>

	[BZ #11134]
	* nis/libnsl.h (NSS_FLAG_ADJUNCT_AS_SHADOW): Define.
	* nis/nss: Document new ADJUNCT_AS_SHADOW variable.
	* nis/nss-default.c: Handle ADJUNCT_AS_SHADOW variable.
	* nis/nss_nis/nis-pwd.c (internal_nis_endpwent): Minor cleanups.
	(internal_nis_getpwent_r): Don't fill in password from adjunct table
	if NSS_FLAG_ADJUNCT_AS_SHADOW is set.
	(_nss_nis_getpwnam_r): Likewise.
	(_nss_nis_getpwuid_r): Likewise.
	* nis/nss_nis/nis-spwd.c (ent_adjunct_used): New global variable.
	(_nss_nis_setspent): Also reset ent_adjunct_used.
	(internal_nis_getspent_r): If new_start is set and shadow.byname table
	does not exist and NSS_FLAG_ADJUNCT_AS_SHADOW is set, try to get
	passwd.adjunct.byname table.  If new_start is not set get next entry
	from the initially used table.  Synthesize shadow.byname table if
	necessary by adding two empty fields.
	(_nss_nis_getspnam_r): If shadow.byname table does not exist and
	NSS_FLAG_ADJUNCT_AS_SHADOW is set, try to get passwd.adjunct.byname
	table and synthesize shadow.byname table.

2010-04-06  H.J. Lu  <hongjiu.lu@intel.com>

	* Makerules (libc-abis): Add $(..) to libc-abis.

2010-04-06  Joseph Myers  <joseph@codesourcery.com>

	* Makerules (libc-abis): Fix search for libc-abis in add-ons.

2010-04-05  Thomas Schwinge  <thomas@schwinge.name>

	* sysdeps/gnu/unwind-resume.c: New, moved from nptl/sysdeps/pthread/.
	* sysdeps/gnu/rt-unwind-resume.c: Likewise.