@@ -1,3 +1,11 @@
+2010-04-07  Ulrich Drepper  <drepper@redhat.com>
+
+	* posix/bug-getopt1.c: New file.
+	* posix/bug-getopt2.c: New file.
+	* posix/bug-getopt3.c: New file.
+	* posix/bug-getopt4.c: New file.
+	* posix/bug-getopt5.c: New file.
+
 2009-12-01  Eric Blake  <ebb9@byu.net>
 
 	[BZ #11039]
